Bucketizer example implemented